--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .task.done {
     text-decoration: line-through;
-  }
+}
+
+#app {
+    display: flex;
+    width: 40%;
+    margin: 30px 0 0 26%;
+    flex-direction: column;
+}
+
+img {
+    width: 400px;
+    margin: 0 0 30px 112px;
+}
+
+input {
+    padding: 10px;
+    margin-right: 30px;
+    border-radius: 10px;
+}
+
+button {
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.container-tasks {
+    margin-top: 30px;
+    background-color: rgba(128, 128, 128, 0.221);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+li {
+    padding-bottom: 10px;
+}
+
+.new-task {
+    padding-left: 27%;
+}
